force-app/main/default/objects/TLO_Contact_Update_Request__c/TLO_Contact_Update_Request__c.object-meta.xml
<CustomObject>
    <description>Holds requested / recommended updates for a TLO Contact</description>
    <label>TLO Contact Update Request</label>
    <nameField>
        <displayFormat>CRU-{000000}</displayFormat>
        <label>TLO Contact Update Requests ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>TLO_Contact Update Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>