force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Current_Alternative_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Alternative_Email__c</fullName>
    <formula>Contact__r.AltEmail__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Email</label>
    <type>Text</type>
</CustomField>