force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Current_Alternative_Phone__c.field-meta.xml
<CustomField>
    <fullName>Current_Alternative_Phone__c</fullName>
    <formula>Contact__r.PersonOtherPhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Alternative Phone</label>
    <type>Text</type>
</CustomField>