force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Current_Email__c.field-meta.xml
<CustomField>
    <fullName>Current_Email__c</fullName>
    <formula>Contact__r.PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Email</label>
    <type>Text</type>
</CustomField>