force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Current_Institution__c.field-meta.xml
<CustomField>
    <fullName>Current_Institution__c</fullName>
    <formula>Contact__r.Institution__pc</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Institution</label>
    <type>Text</type>
</CustomField>