force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Current_Phone__c.field-meta.xml
<CustomField>
    <fullName>Current_Phone__c</fullName>
    <formula>Contact__r.PersonMobilePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Primary Phone</label>
    <type>Text</type>
</CustomField>