force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Disclosure__c.field-meta.xml
<CustomField>
    <fullName>Disclosure__c</fullName>
    <label>Disclosure ID</label>
    <referenceTo>Disclosure__c</referenceTo>
    <relationshipName>Contact_Requested_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>