force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Email__c.field-meta.xml
<CustomField>
    <fullName>Email__c</fullName>
    <externalId>true</externalId>
    <label>Primary Email</label>
    <type>Email</type>
</CustomField>