force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Institution__c.field-meta.xml
<CustomField>
    <fullName>Institution__c</fullName>
    <label>Institution</label>
    <length>100</length>
    <type>Text</type>
</CustomField>