force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/InstitutionCode__c.field-meta.xml
<CustomField>
    <fullName>InstitutionCode__c</fullName>
    <label>Institution Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>