force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>