force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Request_Name__c.field-meta.xml
<CustomField>
    <fullName>Request_Name__c</fullName>
    <formula>HYPERLINK(&quot;/lightning/r/&quot; &amp; Id &amp; &quot;/view&quot;, IF( ISBLANK( Contact__r.PreferredName__pc ), TRIM( Contact__r.FirstName + &quot; &quot; + Contact__r.MiddleName + &quot; &quot; + Contact__r.LastName ), TRIM( Contact__r.PreferredName__pc + &quot; &quot; +  Contact__r.LastName ) ), &quot;_self&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Request Name</label>
    <type>Text</type>
</CustomField>