force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/TLO_Contact__c.field-meta.xml
<CustomField>
    <fullName>TLO_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>TLO Contact (Old)</label>
    <referenceTo>TLO_Contact__c</referenceTo>
    <relationshipLabel>TLO_Contact Update Requests</relationshipLabel>
    <relationshipName>Contact_Requested_Updates</relationshipName>
    <type>Lookup</type>
</CustomField>