force-app/main/default/objects/TLO_Contact_Update_Request__c/fields/Update_Status__c.field-meta.xml
<CustomField>
    <fullName>Update_Status__c</fullName>
    <description>Status indication whether TLO Ops has updated the Contact details or not. Defaults to Pending</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>